// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar Block adds open modifier 1`] = `
.c1 {
  padding-left: 1em;
  color: white;
  font-family: Bangers;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
}

.c3 {
  padding: 1.5em;
  text-align: justify;
}

.c2 {
  position: absolute;
  background-color: transparent;
  color: rgba(255,255,255,0.7);
  border: none;
  top: 0;
  right: 0;
  font-size: 3em;
}

.c2:hover {
  cursor: pointer;
  color: rgba(255,255,255,1);
}

.c0 {
  background-color: #222;
  color: rgba(255,255,255,1);
  position: absolute;
  top: 0;
  left: 0;
  box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
  -webkit-transition: all 500ms ease-in-out;
  transition: all 500ms ease-in-out;
  width: 100%;
  background: rgba(34,34,34,0.87);
  position: fixed;
  height: 100%;
  top: 0;
  left: 0;
  overflow-y: auto;
  z-index: 1200;
  padding-bottom: 4em;
  box-sizing: border-box;
}

@media (min-width:48em) {
  .c0 {
    min-height: calc(100% - 50px);
    width: 20em;
    z-index: 300;
  }
}

<aside
  className="c0"
  open={true}
>
  <h2
    className="c1"
  >
    Sidebar Title
  </h2>
  <button
    className="c2"
  >
    X
  </button>
  <div
    className="c3"
  >
    This is a Sidebar
  </div>
</aside>
`;

exports[`Sidebar Block renders correctly 1`] = `
.c1 {
  padding-left: 1em;
  color: white;
  font-family: Bangers;
  -webkit-letter-spacing: 0.1em;
  -moz-letter-spacing: 0.1em;
  -ms-letter-spacing: 0.1em;
  letter-spacing: 0.1em;
}

.c3 {
  padding: 1.5em;
  text-align: justify;
}

.c2 {
  position: absolute;
  background-color: transparent;
  color: rgba(255,255,255,0.7);
  border: none;
  top: 0;
  right: 0;
  font-size: 3em;
}

.c2:hover {
  cursor: pointer;
  color: rgba(255,255,255,1);
}

.c0 {
  background-color: #222;
  color: rgba(255,255,255,1);
  position: absolute;
  top: 0;
  left: -300px;
  box-shadow: 0px 3px 15px rgba(0,0,0,0.2);
  -webkit-transition: all 500ms ease-in-out;
  transition: all 500ms ease-in-out;
  width: 100%;
  background: rgba(34,34,34,0.87);
  position: fixed;
  height: 100%;
  top: 0;
  left: -100%;
  overflow-y: auto;
  z-index: 1200;
  padding-bottom: 4em;
  box-sizing: border-box;
}

@media (min-width:48em) {
  .c0 {
    min-height: calc(100% - 50px);
    width: 20em;
    z-index: 300;
  }
}

<aside
  className="c0"
>
  <h2
    className="c1"
  >
    Sidebar Title
  </h2>
  <button
    className="c2"
  >
    X
  </button>
  <div
    className="c3"
  >
    This is a Sidebar
  </div>
</aside>
`;
